Fixed projectile removal crash and added button icons

--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -47,11 +47,22 @@
     <right>
         <VBox alignment="TOP_CENTER" prefWidth="256.0" spacing="10" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="pauseButton" text="Pause" />
-                <Button fx:id="speedButton" text="x1" />
-                <Button fx:id="exitButton" text="Exit" />
-                <Button fx:id="saveButton" text="Save" />
-                <Button fx:id="restartButton" text="Restart" />
+            <HBox alignment="TOP_CENTER" prefHeight="35.0" prefWidth="256.0">
+               <children>
+                   <Button fx:id="pauseButton"/>
+                   <Pane prefHeight="35.0" prefWidth="10.0" />
+                   <Button fx:id="restartButton"/>
+                   <Pane prefHeight="35.0" prefWidth="10.0" />
+                   <Button fx:id="exitButton"/>
+               </children>
+            </HBox>
+            <HBox alignment="TOP_CENTER" prefHeight="35.0" prefWidth="256.0">
+               <children>
+                   <Button fx:id="speedButton" text= " x1 " />
+                   <Pane prefHeight="35.0" prefWidth="10.0" />
+                   <Button fx:id="saveButton"/>
+               </children>
+            </HBox>
                 <HBox alignment="CENTER_LEFT" spacing="10">
                     <Pane prefHeight="24.0" prefWidth="24.0" />
                     <ImageView fx:id="healthIcon" fitHeight="24" fitWidth="24" />
