Updated game state for game over logic

--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -45,6 +45,7 @@
             <VBox fx:id="gameOverOverlay" alignment="TOP_CENTER" maxHeight="600.0" maxWidth="800.0" spacing="20" style="-fx-background-color: rgba(0,0,0,0.6);" visible="false">
                 <children>
                     <Label prefHeight="45.0" prefWidth="215.0" style="-fx-font-size: 30px; -fx-text-fill: #000000;" text="Enemies Killed: " />
+               <Pane prefHeight="290.0" prefWidth="800.0" />
                <HBox alignment="CENTER" prefHeight="50.0" prefWidth="800.0">
                   <children>
                           <Button fx:id="restartGameOverBtn" text="Restart" />
