--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -10,11 +10,11 @@
         <HBox alignment="CENTER_LEFT">
         <AnchorPane prefHeight="64.0" prefWidth="256.0">
             <StackPane>
-                <ImageView fitHeight="96.0" pickOnBounds="true" preserveRatio="true" translateX="-20.0" translateY="-36.0">
+                <ImageView fitHeight="96.0" pickOnBounds="true" translateX="-24.0" translateY="-36.0" fitWidth="480.0">
                     <image>
                         <Image url="@../../../assets/ui/banner_hanging.png" />
                     </image></ImageView>
-                <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="256.0">
+                <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="400.0">
                     <Pane prefWidth="16.0" />
                     <StackPane prefWidth="72.0" translateY="-12.0">
                         <children>
@@ -31,7 +31,7 @@
                                     <Font name="System Bold" size="20.0" />
                                 </font></Label>
                         </children></StackPane>
-                    <Pane prefWidth="4.0" />
+                    <Pane prefWidth="8.0" />
                     <StackPane prefWidth="72.0">
                         <children>
                             <ImageView fx:id="archerTowerSelectButton" fitWidth="64.0" onMouseClicked="#onTowerToolSelect" pickOnBounds="true" preserveRatio="true">
@@ -74,10 +74,25 @@
                                 </font></Label>
                         </children>
                     </StackPane>
+                    <Pane prefWidth="8.0" />
+                    <StackPane prefWidth="72.0">
+                        <children>
+                            <ImageView fx:id="towerUpgradeButton" fitWidth="64.0" onMouseClicked="#onTowerToolSelect" pickOnBounds="true" preserveRatio="true">
+                                <userData>TOWER_MAGE</userData>
+                                <image>
+                                    <Image url="@../../../assets/ui/button/tower_option_buttons_3.png" />
+                                </image>
+                            </ImageView>
+                            <Label fx:id="towerUpgradeCostLabel" text="300" translateX="16" translateY="24">
+                                <font>
+                                    <Font name="System Bold" size="13.0" />
+                                </font></Label>
+                        </children>
+                    </StackPane>
                 </HBox>
             </StackPane>
         </AnchorPane>
-            <Pane prefWidth="55.0" />
+            <Pane prefWidth="10.0" />
             <HBox alignment="CENTER">
                 <VBox alignment="CENTER">
                 <HBox alignment="CENTER">
@@ -110,7 +125,7 @@
                         </Label>
                     </HBox>
                 </VBox>
-                <Pane prefWidth="100.0" />
+                <Pane prefWidth="40.0" />
                 <Button fx:id="speedButton" text=" x1 " />
                 <Pane prefWidth="10.0" />
                 <Button fx:id="pauseButton" />
