--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -176,7 +176,7 @@
     </top>
     <center>
         <StackPane>
-            <GridPane fx:id="mapGridPane" gridLinesVisible="true" prefHeight="768.0" prefWidth="1024.0">
+            <GridPane fx:id="mapGridPane" gridLinesVisible="false" prefHeight="768.0" prefWidth="1024.0">
                 <columnConstraints>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="64.0" />
