--- a/src/main/resources/com/canja/kutowerdefence/mainmenu-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/mainmenu-view.fxml
@@ -37,4 +37,9 @@
          <Font size="16.0" />
       </font>
    </Button>
-</VBox>
+   <Pane prefHeight="20.0" />
+   <Button fx:id="levelButton" layoutX="335.0" layoutY="409.0" mnemonicParsing="false" text="LVL">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Button></VBox>
