Small layout fix for Gameover Overlay

--- a/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
+++ b/src/main/resources/com/canja/kutowerdefence/gameplay-view.fxml
@@ -210,11 +210,10 @@
                 </rowConstraints>
             </GridPane>
             <Pane fx:id="enemyLayer" pickOnBounds="false" />
-            <VBox fx:id="gameOverOverlay" alignment="TOP_CENTER" maxHeight="600.0" maxWidth="800.0" spacing="20" style="-fx-background-color: rgba(0,0,0,0.6);" visible="false">
+            <VBox fx:id="gameOverOverlay" alignment="TOP_CENTER" maxHeight="600.0" maxWidth="800.0" spacing="20" style="-fx-background-color: rgba(0,0,0,0.6);" visible="false" translateY="-100">
                 <children>
                     <Label fx:id="enemiesKilledLabel" prefHeight="45.0" prefWidth="300.0" style="-fx-font-family: 'System'; -fx-font-size: 30px; -fx-text-fill: #F8E8A0; -fx-font-weight: bold; -fx-effect: dropshadow(one-pass-box, black, 5, 0.3, 2, 2);" alignment="CENTER" text="Enemies Killed: 0" />
-
-                    <Pane prefHeight="290.0" prefWidth="800.0" />
+                    <Pane prefHeight="400.0" prefWidth="800.0" />
                     <HBox alignment="CENTER" prefHeight="50.0" prefWidth="800.0">
                         <children>
                             <ImageView fx:id="restartGameOverBtn" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true">
